# KM3Former

./: README.md  pyproject.toml
model/: data_loader.py  km3former.py  scheduler.py  train.py
pre-porcessing/: normalisation.py  padding.py  pre_process.py  root_loader.py
