[tool.poetry]
name = "km3former"
version = "0.1.0"
description = "KM3Former is an open-source package developed under the High Energy Physics Institute, Tbilisi, Georgia, as part of the KM3NeT (Cubic Kilometre Neutrino Telescope) project. This repository contains a novel approach to muon reconstruction in neutrino telescopes using transformer-based deep learning models."
authors = ["davitjnz <djanezashvili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
km3io = "^1.2.0"
joblib = "^1.4.2"
pandas = "^2.2.2"
awkward = "^2.6.6"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
